Code cleanup (#1)
* code cleanup after code review

* added Dockerfile

* added Dockerfile.native and configuration for native build

* added docker-build.yml github actions

* updated docker-build.yml workflow

* updated docker workflows